--- a/Darrick_sandifer_module6_programming_assignment.ipynb
+++ b/Darrick_sandifer_module6_programming_assignment.ipynb
@@ -38,12 +38,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f7c187e7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "           "
+    "import multiprocessing\n",
+    "import time\n",
+    "import random\n",
+    "from datetime import datetime\n",
+    "\n",
+    "def create_processes():\n",
+    "    time.sleep(random.random())\n",
+    "    print(datetime.now())\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    for i in range(3):\n",
+    "        go=multiprocessing.Process(target=create_processes)\n",
+    "        go.start()"
    ]
   }
  ],
